--- a/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
@@ -159,17 +159,17 @@ resources:
       floating_network_id: 6ea98324-0f14-49f6-97c0-885d1b8dc517
       port_id: { get_resource: client_port }
 
-  #floating_ip_link:
-  #  type: OS::Nova::FloatingIPAssociation
-  #  properties:
-  #    floating_ip: { get_resource: floating_ip }
-  #    server_id: { get_resource: server }
+  floating_ip_link:
+    type: OS::Nova::FloatingIPAssociation
+    properties:
+      floating_ip: { get_resource: floating_ip }
+      server_id: { get_resource: server }
 
-  #floating_ip_link2:
-  #  type: OS::Nova::FloatingIPAssociation
-  #  properties:
-  #    floating_ip: { get_resource: floating_ip2 }
-  #    server_id: { get_resource: client }
+  floating_ip_link2:
+    type: OS::Nova::FloatingIPAssociation
+    properties:
+      floating_ip: { get_resource: floating_ip2 }
+      server_id: { get_resource: client }
 
   server_port:
     type: OS::Neutron::Port
@@ -179,7 +179,7 @@ resources:
       network_id: { get_resource: network }
       fixed_ips:
         - ip_address: { "Fn::Replace": [ {'.0/24': '.100'}, {get_param: server_cidr} ] }
-        - subnet_id: { get_resource: subnet }
+        #- subnet_id: { get_resource: subnet }
 
   client_port:
     type: OS::Neutron::Port
@@ -189,7 +189,7 @@ resources:
       network_id: { get_resource: network2 }
       fixed_ips:
         - ip_address: { "Fn::Replace": [ {'.0/24': '.100'}, {get_param: client_cidr} ] }
-        - subnet_id: { get_resource: subnet2 }
+        #- subnet_id: { get_resource: subnet2 }
 
   serverlanserver:
     type: OS::Nova::Server
@@ -221,7 +221,7 @@ resources:
       image:  { get_param: image }
       flavor: { get_param: flavor_name }
       networks:
-        - port: { get_resource: server_port }
+      - port: { get_resource: server_port }
       user_data_format: RAW
       user_data:
         str_replace:
@@ -244,7 +244,6 @@ resources:
             export DEBIAN_FRONTEND=noninteractive
             apt-get update 2>&1 >> /var/log/vpn_srv.log
             echo "$(date) - update done" >> /var/log/vpn_srv.log
-            sudo ifconfig eth0 10.10.1.100 netmask 255.255.255.0 up
             apt-get -o Dpkg::Options::="--force-confold" upgrade -y 2>&1 >> /var/log/vpn_srv.log
             echo "$(date) - upgrade done" >> /var/log/vpn_srv.log
             apt-get -o Dpkg::Options::="--force-confold" install openvpn -y 2>&1 >> /var/log/vpn_srv.log
@@ -275,13 +274,12 @@ resources:
       image:  { get_param: image }
       flavor: { get_param: flavor_name }
       networks:
-        - port: { get_resource: client_port }
+      - port: { get_resource: client_port }
       user_data_format: RAW
       user_data:
         str_replace:
           template: |
             #!/usr/bin/env bash
-            sudo ifconfig eth0 10.20.1.100 netmask 255.255.255.0 up
             echo -n "$ip_server$" >> /home/cloud/ip_server
             echo -n "$ssh_key_priv$" >> /home/cloud/.ssh/my_key.pem
             echo -n "$ssh_key_pub$" >> /home/cloud/.ssh//authorized_keys
@@ -315,13 +313,13 @@ outputs:
 #    description: IP address of server on private network
 #    value: { get_attr: [ client, first_address ] }
 
-  #floating_ip:
-  #  description: IP address of the deployed compute server
-  #  value: { get_attr: [floating_ip, floating_ip_address] }
+  floating_ip:
+    description: IP address of the deployed compute server
+    value: { get_attr: [floating_ip, floating_ip_address] }
 
-  #floating_ip2:
-  #  description: IP address of the deployed compute client
-  #  value: { get_attr: [floating_ip2, floating_ip_address] }
+  floating_ip2:
+    description: IP address of the deployed compute client
+    value: { get_attr: [floating_ip2, floating_ip_address] }
 
   server_id:
     description: ID of the server
