--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/files/server.conf
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/files/server.conf
@@ -5,6 +5,7 @@ client-config-dir ccd
 route X.X.X.X 255.255.255.0
 client-to-client
 push "X.X.X.X 255.255.255.0"
+push "X.X.X.X.X 255.255.255.0"
 ca /etc/openvpn/ca.crt
 cert /etc/openvpn/server.crt
 key /etc/openvpn/server.key
