--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -76,4 +76,6 @@
     mv client.conf ..
     cd /home/cloud/
     sudo rm ip_server
+    sudo route del -net {{server_cidr}}/24 dev eth0
+    sudo route add -net {{server_cidr}}/24 dev tun0
     sudo service openvpn restart
