--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
@@ -8,3 +8,4 @@ EMAIL:  "{{ lookup('file', '/etc/vpnconf/EMAIL') }}"
 ip_client:  "{{ lookup('file', '/home/cloud/ip_client') }}"
 client_cidr: "{{ lookup('file', '/home/cloud/client_cidr.tmp') }}"
 server_cidr: "{{ lookup('file', '/home/cloud/server_cidr.tmp') }}"
+#subnet_id_server:  "{{ lookup('file', '/home/cloud/subnet_id_server') }}"
