--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
@@ -5,7 +5,9 @@ PROVINCE:  "{{ lookup('file', '/etc/vpnconf/PROVINCE') }}"
 CITY: "{{ lookup('file', '/etc/vpnconf/CITY') }}"
 ORGANISATION: "{{ lookup('file', '/etc/vpnconf/ORGANISATION') }}"
 EMAIL:  "{{ lookup('file', '/etc/vpnconf/EMAIL') }}"
-ip_client:  "{{ lookup('file', '/home/cloud/ip_client') }}"
-client_cidr: "{{ lookup('file', '/home/cloud/client_cidr.tmp') }}"
-server_cidr: "{{ lookup('file', '/home/cloud/server_cidr.tmp') }}"
-#subnet_id_server:  "{{ lookup('file', '/home/cloud/subnet_id_server') }}"
+ip_client:  "{{ lookup('file', '/home/cloud/congig/ip_client') }}"
+client_cidr: "{{ lookup('file', '/home/cloud/congig/client_cidr.tmp') }}"
+server_cidr: "{{ lookup('file', '/home/cloud/congig/server_cidr.tmp') }}"
+server_cidr_gw: "{{ lookup('file', '/home/cloud/congig/server_cidr_gw.tmp') }}"
+server_cidr_gw_df: "{{ lookup('file', '/home/cloud/congig/server_cidr_gw_df.tmp') }}"
+client_cidr_gw: "{{ lookup('file', '/home/cloud/congig/client_cidr_gw.tmp') }}"
