--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/vars/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/vars/main.yml
@@ -1,4 +1,9 @@
 ---
 vpn_static_client:
-ip_server:  "{{ lookup('file', '/home/cloud/ip_server') }}"
-#subnet_id_client:  "{{ lookup('file', '/home/cloud/subnet_id_client') }}"
+ip_server:  "{{ lookup('file', '/home/cloud/congig/ip_server') }}"
+server_cidr: "{{ lookup('file', '/home/cloud/congig/server_cidr.tmp') }}"
+client_cidr: "{{ lookup('file', '/home/cloud/congig/client_cidr.tmp') }}"
+server_cidr_gw: "{{ lookup('file', '/home/cloud/congig/server_cidr_gw.tmp') }}"
+client_cidr_gw: "{{ lookup('file', '/home/cloud/congig/client_cidr_gw.tmp') }}"
+server_cidr_gw_df: "{{ lookup('file', '/home/cloud/congig/server_cidr_gw_df.tmp') }}"
+client_cidr_gw_df: "{{ lookup('file', '/home/cloud/congig/client_cidr_gw_df.tmp') }}"
