--- a/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
@@ -207,10 +207,25 @@ resources:
         str_replace:
           template: |
             #!/usr/bin/env bash
-            sudo route del -net "$server_cidr$" dev eth0
-            sudo route add -net "$server_cidr$" dev eth0
+            sudo mkdir /home/cloud/config
+            sudo chown -R cloud:cloud /home/cloud/config
+            echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
+            echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
+            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
+            #mv /home/cloud/config/server_cidr.tmp /home/cloud/config/server_cidr
+            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/client_cidr > /home/cloud/config/client_cidr.tmp
+            #mv /home/cloud/config/client_cidr.tmp /home/cloud/config/client_cidr
+            cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw.tmp
+            cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw_df.tmp
+            sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw.tmp
+            sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw_df.tmp
+            sed -i -e "s/0:24/100/g" /home/cloud/config/server_cidr_gw.tmp
+            sed -i -e "s/0:24/1/g"  /home/cloud/config/server_cidr_gw_df.tmp
+            git clone  https://github.com/mickaelremilien/CLOUDPATT.git
+            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn/ansible/bootstrap2lanserver.yml
           params:
             $server_cidr$: {get_param: server_cidr}
+            $client_cidr$: {get_param: client_cidr}
 
   serverlanclient:
     type: OS::Nova::Server
@@ -227,9 +242,24 @@ resources:
         str_replace:
           template: |
             #!/usr/bin/env bash
-            sudo route del -net "$client_cidr$" dev eth0
-            sudo route add -net "$client_cidr$" dev eth0
+            sudo mkdir /home/cloud/config
+            sudo chown -R cloud:cloud /home/cloud/config
+            echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
+            echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
+            cp /home/cloud/config/client_cidr /home/cloud/config/client_cidr_gw.tmp
+            cp /home/cloud/config/client_cidr /home/cloud/config/client_cidr_gw_df.tmp
+            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
+            #mv /home/cloud/config/server_cidr.tmp /home/cloud/config/server_cidr
+            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/client_cidr > /home/cloud/config/client_cidr.tmp
+            #mv /home/cloud/config/client_cidr.tmp /home/cloud/config/client_cidr
+            sed -i -e "s/\//:/g"  /home/cloud/config/client_cidr_gw.tmp
+            sed -i -e "s/\//:/g"  /home/cloud/config/client_cidr_gw_df.tmp
+            sed -i -e "s/0:24/100/g" /home/cloud/config/client_cidr_gw.tmp
+            sed -i -e "s/0:24/1/g"  /home/cloud/config/client_cidr_gw_df.tmp
+            git clone  https://github.com/mickaelremilien/CLOUDPATT.git
+            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn/ansible/bootstrap2lanclient.yml
           params:
+            $server_cidr$: {get_param: server_cidr}
             $client_cidr$: {get_param: client_cidr}
   server:
     type: OS::Nova::Server
