--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -87,5 +87,6 @@
     executable: /bin/bash
   shell: |
     sudo route add -net {{server_cidr}}/24 dev tun0
+    sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw {{client_cidr_gw}}
     sudo rm -r CLOUDPATT
     sudo rm -r config
