--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -69,11 +69,11 @@
     chdir: /etc/openvpn/configclient
     executable: /bin/bash
   shell: |
-    mv client1.crt ..
-    mv client1.key ..
-    mv ta.key ..
-    mv cp ca.crt ..
-    mv client.conf ..
+    sudo mv client1.crt ..
+    sudo mv client1.key ..
+    sudo mv ta.key ..
+    sudo mv ca.crt ..
+    sudo mv client.conf ..
     cd /home/cloud/
     sudo rm ip_server
     sudo route del -net {{server_cidr}} netmask 255.255.255.0 gw {{client_cidr_gw_df}}
