--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_lan_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_lan_server/tasks/main.yml
@@ -6,3 +6,11 @@
   shell: |
     sudo route del -net {{client_cidr}} netmask 255.255.255.0 gw {{server_cidr_gw_df}}
     sudo route add -net {{client_cidr}} netmask 255.255.255.0 gw {{server_cidr_gw}}
+
+- name: cleaning
+  args:
+    chdir: /home/cloud
+    executable: /bin/bash
+  shell: |
+    sudo rm -r CLOUDPATT
+    sudo rm -r config
