--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -70,7 +70,7 @@
     executable: /bin/bash
   shell: |
     sudo mv client1.crt ..
-    sudo mv client1.key ..
+    sudo mv client1.key g..
     sudo mv ta.key ..
     sudo mv ca.crt ..
     sudo mv client.conf ..
@@ -86,6 +86,6 @@
     executable: /bin/bash
   shell: |
     sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw 172.1.1.5
-    sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw {{client_cidr_gw}}
+    sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw {{clientcidr_gw}}
     sudo rm -r CLOUDPATT
     #sudo rm -r config
