--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -76,7 +76,6 @@
     sudo mv client.conf ..
     cd /home/cloud/
     sudo route del -net {{server_cidr}} netmask 255.255.255.0 gw {{client_cidr_gw_df}}
-    sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw {{client_cidr_gw}}
     sudo service openvpn restart
 
 
@@ -85,7 +84,7 @@
     chdir: /home/cloud
     executable: /bin/bash
   shell: |
-    sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw 172.1.1.5
-    sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw {{client_cidr_gw}}
+    sudo route add -net {{server_cidr}}/24 dev tun0
+    #sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw {{client_cidr_gw}}
     sudo rm -r CLOUDPATT
     #sudo rm -r config
