--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -84,10 +84,11 @@
     chdir: /home/cloud
     executable: /bin/bash
   shell: |
+    sudo /sbin/iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
+    sudo /sbin/iptables -A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
+    sudo /sbin/iptables -A FORWARD -i eth0 -o tun0 -j ACCEPT
     sudo route add -net {{server_cidr}}/24 dev tun0
     sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw 172.1.1.5
-    sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw 172.1.1.5
-    sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw 172.1.1.5
-    sudo route add -net {{server_cidr}} netmask 255.255.255.0 gw 172.1.1.5 
+
     sudo rm -r CLOUDPATT
     #sudo rm -r config
