--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -91,12 +91,12 @@
     sudo rm -r CLOUDPATT
     #sudo rm -r config
 
-- name: add route
-  network:
-    container_interface: "tun0"
-    static_routes:
-      - cidr: "{{server_cidr}}"/24
-        gateway: 172.1.1.5
+#- name: add route
+#  network:
+#    container_interface: "tun0"
+#    static_routes:
+#      - cidr: "{{server_cidr}}"/24
+#        gateway: 172.1.1.5
 
 - name: adding route
   network_ether_interfaces:
