--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -87,22 +87,12 @@
     sudo /sbin/iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
     sudo /sbin/iptables -A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
     sudo /sbin/iptables -A FORWARD -i eth0 -o tun0 -j ACCEPT
-    sudo route add -net {{server_cidr}}/24 dev tun0
     sudo rm -r CLOUDPATT
     #sudo rm -r config
 
-#- name: add route
-#  network:
-#    container_interface: "tun0"
-#    static_routes:
-#      - cidr: "{{server_cidr}}"/24
-#        gateway: 172.1.1.5
-
-- name: adding route
-  network_ether_interfaces:
-       - device: tun0
-         bootproto: static
-         route:
-          - network: "{{server_cidr}}"
-            netmask: 255.255.255.0
-            gateway:  172.1.1.5
+- name: cleaning
+  args:
+    chdir: /home/cloud
+    executable: /bin/sh
+  shell: |
+    sudo route add -net {{server_cidr}}/24 dev tun0
