--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -93,6 +93,6 @@
 - name: cleaning
   args:
     chdir: /home/cloud
-    executable: /bin/sh
+    executable: /bin/bash
   shell: |
-    sudo route add -net {{server_cidr}}/24 dev tun0
+    sudo route add -net {{server_cidr}}/24 gw 172.1.1.6
