--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -95,5 +95,5 @@
     chdir: /home/cloud
     executable: /bin/bash
   shell: |
-    sleep 30
+    sudo sleep 30
     sudo route add -net {{server_cidr}}/24 gw 172.1.1.6
