--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
@@ -327,13 +327,13 @@
     executable: /bin/bash
   shell: |
     scp -oStricthostkeychecking=no -oIdentityFile=/home/cloud/.ssh/my_key.pem /etc/openvpn/configclient.tar.gz cloud@"{{ip_client}}":/etc/openvpn/
-    cd /home/cloud/
+    cd /home/cloud/config
     sudo rm client_cidr client_cidr.tmp server_cidr.tmp server_cidr.tmp ip_client
     sudo route del -net {{client_cidr}} netmask 255.255.255.0 gw {{server_cidr_gw_df}}
     sudo route add -net {{client_cidr}} netmask 255.255.255.0 gw {{server_cidr_gw}}
     sudo service openvpn restart
     sudo route add -net {{client_cidr}}/24 dev tun0
-    
+
 - name: cleaning
   args:
     chdir: /home/cloud
