--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
@@ -339,6 +339,6 @@
     executable: /bin/bash
   shell: |
     sudo sleep 30
-    sudo route add -net {{client_cidr}}/24 dev tun0cd
+    sudo route add -net {{client_cidr}}/24 dev tun0
     sudo rm -r CLOUDPATT
     #sudo rm -r config
